--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </header>
 <div class="container">
     <div class="image-container">
-        <img src="https://scontent-lax3-1.xx.fbcdn.net/v/t39.30808-1/395727544_1385010012425620_851785194854718566_n.jpg?stp=dst-jpg_p200x200&_nc_cat=105&ccb=1-7&_nc_sid=5740b7&_nc_ohc=O1uE5ZHSkC0AX-JfdWW&_nc_ht=scontent-lax3-1.xx&oh=00_AfBuPG8l0NoTyK44ezIdj2jI8O262DPO5BvYyb1BQRLVLg&oe=65940166"
+        <img src="src/img/FaceApp_1700119687255.png"
              alt="Amanda Helmer">
     </div>
     <div><h1>Amanda Helmer</h1></div>
